--- a/CustomeYoloV5NugetPackage/CustomeYoloV5NugetPackage.csproj
+++ b/CustomeYoloV5NugetPackage/CustomeYoloV5NugetPackage.csproj
@@ -10,7 +10,7 @@
     <Version>0.0.2</Version>
     <PackageTags>ML;YoloV5;LiYangPei;cn.connfly.group</PackageTags>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Copyright>https://licenses.nuget.org/MIT</Copyright>
+    <Copyright>LICENSE</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.7.0" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.10.0" />
     <PackageReference Include="Microsoft.ML.OnnxTransformer" Version="1.7.0" />
+    <None Include="LICENSE" Pack="true" PackagePath="LICENSE"/>
   </ItemGroup>
 
 </Project>
